--- a/Mobile App/Demo4.2/app/src/main/res/layout/dialog_info_modified.xml
+++ b/Mobile App/Demo4.2/app/src/main/res/layout/dialog_info_modified.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:padding="@dimen/_25sdp"
     android:background="@android:color/transparent">
 
@@ -13,67 +14,161 @@
         app:cardCornerRadius="@dimen/_8sdp"
         android:elevation="0dp">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingHorizontal="@dimen/_15sdp">
+            android:orientation="vertical"
+            android:paddingHorizontal="@dimen/_20sdp"
+            android:gravity="center"
+            >
 
             <ImageView
-                android:id="@+id/imageView3"
                 android:layout_width="@dimen/_60sdp"
                 android:layout_height="@dimen/_60sdp"
-                android:layout_marginTop="26dp"
                 android:src="@drawable/ic_info_dialog"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:layout_marginTop="@dimen/_20sdp"/>
 
             <TextView
                 android:id="@+id/tvName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="10dp"
-                android:fontFamily="@font/nunito_black"
                 android:text="No data found"
+                android:fontFamily="@font/nunito_black"
                 android:textColor="@color/dark_blue"
                 android:textSize="18sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+                android:layout_marginTop="@dimen/_14sdp" />
 
 
             <TextView
                 android:id="@+id/tvDes"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/nunito_light"
                 android:text="This building has no data to run. Please download to use the app"
-                android:textColor="@android:color/black"
                 android:textSize="15sp"
-                app:layout_constraintEnd_toEndOf="@+id/tvName"
-                app:layout_constraintStart_toStartOf="@+id/tvName"
-                app:layout_constraintTop_toBottomOf="@id/tvName" />
+                android:fontFamily="@font/nunito_light"
+                android:textColor="@android:color/black"
+                android:layout_marginTop="@dimen/_5sdp"/>
 
 
             <Button
                 android:id="@+id/bt_close"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="@dimen/_10sdp"
-                android:background="@android:color/transparent"
-                android:fontFamily="@font/nunito_black"
                 android:text="Close"
-                android:textColor="@color/dark_green"
+                android:fontFamily="@font/nunito_black"
                 android:textSize="13sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvDes" />
+                android:layout_gravity="end"
+                android:textColor="@color/dark_green"
+                android:background="@android:color/transparent"/>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
 
     </androidx.cardview.widget.CardView>
 
 </FrameLayout>
+
+
+<!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="wrap_content"-->
+<!--    android:background="@android:color/transparent"-->
+<!--    xmlns:app="http://schemas.android.com/apk/res-auto">-->
+
+<!--    <ImageView-->
+<!--        android:layout_width="@dimen/_50sdp"-->
+<!--        android:layout_height="@dimen/_50sdp"-->
+<!--        android:src="@drawable/info_dialog"-->
+<!--        android:translationZ="10dp"-->
+<!--        android:layout_gravity="center_horizontal"-->
+
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent" />-->
+
+
+<!--    <androidx.cardview.widget.CardView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:visibility="visible"-->
+<!--        android:layout_marginTop="@dimen/_25sdp"-->
+<!--        app:cardCornerRadius="@dimen/_10sdp"-->
+
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent">-->
+
+<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="@dimen/_25sdp">-->
+
+<!--            <TextView-->
+<!--                android:id="@+id/tvName"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="FPT University"-->
+<!--                android:fontFamily="@font/nunito_black"-->
+<!--                android:textColor="@android:color/black"-->
+<!--                android:textSize="18sp"-->
+<!--                android:layout_marginTop="@dimen/_10sdp"-->
+
+<!--                app:layout_constraintTop_toTopOf="parent"-->
+<!--                app:layout_constraintStart_toStartOf="parent"-->
+<!--                app:layout_constraintEnd_toEndOf="parent" />-->
+
+<!--            <TextView-->
+<!--                android:id="@+id/tvDes"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="gdhasjd sahdgjsagd askgdjhasgj sahjgdjasgj"-->
+<!--                android:textSize="16sp"-->
+<!--                android:fontFamily="@font/nunito_light"-->
+<!--                android:textColor="@android:color/black"-->
+<!--                android:layout_marginTop="@dimen/_10sdp"-->
+<!--                android:layout_marginBottom="@dimen/_10sdp"-->
+<!--                android:layout_marginStart="@dimen/_20sdp"-->
+<!--                android:layout_marginEnd="@dimen/_20sdp"-->
+<!--                app:layout_constraintTop_toBottomOf="@id/tvName"-->
+<!--                app:layout_constraintStart_toStartOf="parent"-->
+<!--                app:layout_constraintEnd_toEndOf="parent"-->
+<!--                app:layout_constraintBottom_toTopOf="@id/tvClose" />-->
+
+<!--            <TextView-->
+<!--                android:id="@+id/tvDownload"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="Download"-->
+<!--                android:layout_marginBottom="@dimen/_20sdp"-->
+<!--                android:layout_marginEnd="@dimen/_10sdp"-->
+<!--                android:fontFamily="@font/nunito_black"-->
+<!--                android:textColor="@android:color/holo_orange_light"-->
+<!--                android:textSize="18sp"-->
+
+<!--                app:layout_constraintHorizontal_bias="1.0"-->
+<!--                app:layout_constraintStart_toStartOf="parent"-->
+<!--                app:layout_constraintBottom_toBottomOf="parent"-->
+<!--                app:layout_constraintEnd_toStartOf="@id/tvClose" />-->
+
+<!--            <TextView-->
+<!--                android:id="@+id/tvClose"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="Close"-->
+<!--                android:layout_margin="@dimen/_20sdp"-->
+<!--                android:fontFamily="@font/nunito_black"-->
+<!--                android:textColor="@android:color/black"-->
+<!--                android:textSize="18sp"-->
+<!--                app:layout_constraintBottom_toBottomOf="parent"-->
+<!--                app:layout_constraintEnd_toEndOf="parent"-->
+<!--                app:layout_constraintHorizontal_bias="1.0" />-->
+
+<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->
+
+<!--    </androidx.cardview.widget.CardView>-->
+
+
+
+
+
+<!--</FrameLayout>-->
